--- a/style.css
+++ b/style.css
@@ -1,1 +1,9 @@
-background-image: url('skybackgroundmidnightfeather.png');
+body {
+  background-color: #5cbde5;
+  background-image: url('skybackgroundmidnightfeather.png');
+  background-repeat: repeat;
+  background-size: auto;
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
